--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -26,20 +26,21 @@
         
       </div>
       <div class="encriptado">
-        <img src="img/muñeco.png" alt="" id="muñeco" />
+        <img src="emoji-smiley.gif" alt="" id="muñeco" />
         <div class="mensaje-encriptado" id="mensaje-encriptado">
-          <h2 id="titulo-mensaje">Ningún mensaje fue encontrado</h2>
-          <p id="parrafo">
-            Ingresa el texto que deseas encriptar o desencriptar
-          </p>
           <div class="categorias">
+            <p class="categori" id="categori">Categoria</p>
             <select id="emojiCategory">
                 <option value="animals">Animales</option>
                 <option value="food">Comida</option>
                 <option value="sports">Deportes</option>
                 <option value="faces">Caras</option>
             </select>
-        </div>
+          </div>
+          <h2 id="titulo-mensaje">Ningún mensaje fue encontrado</h2>
+          <p id="parrafo">
+            Ingresa el texto que deseas encriptar o desencriptar
+          </p>
         </div>
       </div>
     </div>
