--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                       <option value="faces">Caras</option>
                   </select>
               </div>
-              <h2 id="titulo-mensaje">Ningún mensaje fue encontrado</h2>
+              <h2 id="titulo-mensaje">No se encontro ningun mensaje</h2>
               <p id="parrafo">
-                  Ingresa el texto que deseas encriptar o desencriptar.
+                  Ingresa el texto que deseas encriptar.
               </p>
           </div>
       </div>
