--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <div class="divtitulo"> 
@@ -24,6 +24,7 @@
               <button class="btn-desencriptar" type="button" onclick="decryptMessage()">Desencriptar 🔓</button>
           </div>
       </div>
+
       <div class="encriptado">
           <img src="emoji-smiley.gif" alt="" id="muñeco" />
           <div class="mensaje-encriptado" id="mensaje-encriptado">
@@ -35,7 +36,13 @@
                       <option value="sports">Deportes</option>
                       <option value="faces">Caras</option>
                   </select>
+            </div>
+
+              <div class="Desplazamiento">
+                <label for="shift">Desplazamiento:</label>
+                <input type="number" id="shift" value="3" min="-25" max="25">
               </div>
+
               <h2 id="titulo-mensaje">No se encontro ningun mensaje</h2>
               <p id="parrafo">
                   Ingresa el texto que deseas encriptar.
@@ -46,7 +53,7 @@
   <footer class="derechos">
       © Todos los derechos reservados
   </footer>
-    <script src="js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
   
 </html>
