--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="mensaje-encriptado" id="mensaje-encriptado">
               <div class="categorias">
                   <p class="categori" id="categori">Categoría</p>
-                  <select id="emojiCategory">
+                  <select id="emojiCategory" class="emoji">
                       <option value="animals">Animales</option>
                       <option value="food">Comida</option>
                       <option value="sports">Deportes</option>
@@ -39,21 +39,23 @@
             </div>
 
               <div class="Desplazamiento">
-                <label for="shift">Desplazamiento:</label>
-                <input type="number" id="shift" value="3" min="-25" max="25">
+                <label for="shift" class="movimiento">Desplazamiento:</label>
+                <input type="number" id="shift" class="numero" value="3" min="-25" max="25">
               </div>
 
-              <h2 id="titulo-mensaje">No se encontro ningun mensaje</h2>
-              <p id="parrafo">
+              <h2 id="titulo-mensaje" class="titulo-mensaje">No se encontro ningun mensaje</h2>
+              <p id="parrafo" class="parrafo">
                   Ingresa el texto que deseas encriptar.
               </p>
           </div>
       </div>
   </div>
   <footer class="derechos">
-      © Todos los derechos reservados
+    <h2>Código Femenino</h2>
+    <p>¡Impulsando la innovación femenina en el mundo del código!</p>
+    <p>&copy; 2024 Código Femenino. Todos los derechos reservados.</p>
   </footer>
-    <script src="assets/js/script.js"></script>
+  <script src="assets/js/script.js"></script>
   </body>
   
 </html>
